Novo ajuste implementado: Adicionar idiomas